to-do-list.html > index.html

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Changa&display=swap" rel="stylesheet">
 
 
-    <script
-    src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-    crossorigin="anonymous"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
 </head>
 <body>
 
