add open and close button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <script src="js/jquery-3.4.1.min.js"></script>
 </head>
 <body>
-
+<h1 class="to_do">To Do List</h1>
+<div class="shadow"></div>
 <div class="main_div">
     <h1>To Do List <i class="fa fa-pencil-square-o" aria-hidden="true"></i></h1>
     <input type="text">
@@ -22,8 +23,9 @@
         <li><span><i class="fa fa-trash" aria-hidden="true"></i> </span>JavaScript </li>
         <li><span><i class="fa fa-trash" aria-hidden="true"></i> </span>Node.js</li>
     </ul>
+    <button type="button" class="close">Close</button>
 </div>
-
+    <button type="button" class="open">Open</button>
     
     <script type="text/JavaScript" src="js/global.js"></script>
 </body>
